syntax = "proto3";
package blog.v1;

option go_package = "github.com/maticnetwork/heimdall/x/blog/types";

import "gogoproto/gogo.proto";

message MsgPost {
    string id = 1;
    bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string title = 3; 
    string body = 4; 
}

message MsgComment {
  string id = 1;
  bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string postID = 3; 
  string body = 4; 
}
